Entity Framework and related modifications.

--- a/BedrockBank/App.config
+++ b/BedrockBank/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BankModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=BedrockBank.BankModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BankModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=BedrockBank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
